# dbt_hol

./: .gitignore  dbt_project.yml  pyproject.toml
dbt_hol/models/l10_staging/: base_knoema_stock_history.sql
dbt_hol/models/l20_transform/: tfm_book.sql  tfm_daily_position.sql  tfm_fx_rates.sql  tfm_knoema_stock_history.sql  tfm_stock_history.sql  tfm_stock_history_major_currency.sql
dbt_hol/tests/: data_quality_tests.yml
macros/: no_nulls_in_columns.sql  positive_value_dim_listing.sql
models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
models/example/: my_second_dbt_model.sql
models/fact/: fact_reviews.sql
models/l10_staging/: base_knoema_fx_rates.sql  sources.yml
models/l20_transform/: tfm_trading_pnl.sql
models/l30_mart/: config.yml
models/mart/: mart_fullmoon_reviews.sql
models/src/: src.yml  src_hosts.sql  src_listings.sql  src_reviews.sql
snapshots/: reviews_snapshots.yml
tests/: consistent_created_at.sql  generic_test.yml
