[project]
name = "dbt_airbnb"
version = "0.1.0"
description = ""
authors = [
    {name = "Vikas"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core (>=1.10.5,<2.0.0)",
    "dbt-snowflake (>=1.10.0,<2.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
